syntax = "proto3";

package user;

option go_package = "proto/user";

// User service gRPC definitions
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
  rpc UpsertUser(UpsertUserRequest) returns (UpsertUserResponse);
}

// User data structure
message User {
  int32 id = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
  string sex = 6;
  string city = 7;
  string state_province = 8;
  string postal_code = 9;
  string country_code = 10;
  string locale = 11;
  string timezone = 12;
  int32 utc_offset = 13;
  string last_active = 14;
  string created_at = 15;
  string updated_at = 16;
}

// Request/Response messages
message CreateUserRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string phone_number = 4;
  string sex = 5;
  string city = 6;
  string state_province = 7;
  string postal_code = 8;
  string country_code = 9;
  string locale = 10;
  string timezone = 11;
  int32 utc_offset = 12;
}

message CreateUserResponse {
  User user = 1;
  string error = 2;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message GetUserByIDResponse {
  User user = 1;
  string error = 2;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
  string error = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
  string sex = 6;
  string city = 7;
  string state_province = 8;
  string postal_code = 9;
  string country_code = 10;
  string locale = 11;
  string timezone = 12;
  int32 utc_offset = 13;
}

message UpdateUserResponse {
  User user = 1;
  string error = 2;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  string message = 1;
  string error = 2;
}

message VerifyUserRequest {
  string email = 1;
  string password = 2;
}

message VerifyUserResponse {
  bool valid = 1;
  User user = 2;
  string error = 3;
}

message UpsertUserRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string phone_number = 4;
  string sex = 5;
  string city = 6;
  string state_province = 7;
  string postal_code = 8;
  string country_code = 9;
  string locale = 10;
  string timezone = 11;
  int32 utc_offset = 12;
}

message UpsertUserResponse {
  User user = 1;
  string error = 2;
}
